# mlpf

./: .gitignore  CLIC_o3_v14.xml  README.md  env_setup.sh  requirements.sh
Pythia_generation/: Zcard.cmd  p8_ee_Hbb_ecm125.cmd  p8_ee_Hcc_ecm125.cmd  p8_ee_Hss_ecm125.cmd  p8_ee_Zuds_ecm91.cmd  p8_ee_tt_ecm365.cmd
condor/: README.md  create_dataset.sh  create_dataset_larger.sh  create_dataset_smaller.sh  make_pftree_clic.py  make_pftree_clic_bindings.py  make_pftree_clic_ed4hep.py  run_sequence.sh  run_sequence_update.sh  run_sequence_update_spread_eval.sh  run_sequence_update_spread_train.sh  script_create_dataset_eval.sh  script_create_dataset_train.sh  submit_jobs.py  submit_jobs_eval.py  submit_jobs_train.py  tree_tools.py
condor_ALLEGRO/: allegro_steer.py  cleanup.sh  run_ALLEGRO_reco.py  run_sequence_ALLEGRO_train.sh  script_create_dataset_train.sh  script_create_dataset_train_apc.sh  submit_jobs.py  submit_jobs_train.py  tree_tools.py
condor_CLD/: create_dataset.sh  run_sequence_CLD.sh  run_sequence_CLD_.sh  run_sequence_CLD_eval.sh  run_sequence_CLD_train.sh  script_create_dataset_eval.sh  script_create_dataset_train.sh  script_create_dataset_train_apc.sh  submit_jobs_eval.py  submit_jobs_train.py  tree_tools.py
condor_Tracking/: condor_gun.sub  demo_mar2024_gregor.sh  make_pftree_clic_bindings.py  run_sequence_CLD_eval.sh  run_sequence_CLD_train.sh  script_create_dataset_eval.sh  script_create_dataset_train.sh  submit_jobs_eval.py  submit_jobs_train.py  tree_tools.py
gun/: CMakeLists.txt  (+6 more)
gun_log_dr/: CMakeLists.txt  config_spread_181124.gun  gun.cpp
(+473 files in other folders)
